# php-sfml

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.m4  php_sfml.cpp  php_sfml.h
.github/workflows/: build.yml
src/: config.cpp  config.h  zend_includes.h  zend_util.h
src/system/: clock.cpp  clock.h  input_stream.cpp  input_stream.h  sleep.cpp  sleep.h  system.h  time.cpp  time.h
stubs/: sfml.php
tests/: 001-extension-loading.phpt  002-sfml-version-defines.phpt  003-time.phpt  004-clock.phpt  005-sleep.phpt
